# mbed-torch-fusion-os

./: .gitignore  .gitmodules  BLEProcess_8h_source.html  CITATION.cff  CMakeLists.txt  Characteristic_8h_source.html  Convention.md  Conversion_8h_source.html  Doxyfile  LICENSE  ModelExecutor_8h_source.html  README.md  SerialMailGenerated_8h_source.html  Service_8h_source.html  ad7124-defs_8h_source.html  annotated.html  classAD7124.html  classBLEProcess-members.html  classBLEProcess.html  classBLEProcess__inherit__graph.dot  classModelExecutor-members.html  classModelExecutor.html  classNotifyCharacteristic__coll__graph.dot  classNotifyCharacteristic__coll__graph.md5  classNotifyCharacteristic__inherit__graph.map  classReadingQueue.html  classWatchPlant__service-members.html  classWatchPlant__service.html  classWatchPlant__service__coll__graph.dot  classWatchPlant__service__coll__graph.map  classWatchPlant__service__coll__graph.md5  classes.html  classmbed__lib_1_1MbedWrapper-members.html  classmbed__lib_1_1MbedWrapper.html  cmake-variants.yaml  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_3484225f4b55c4e61e47b741b0aba340.html  dir_3484225f4b55c4e61e47b741b0aba340_dep.map  dir_3484225f4b55c4e61e47b741b0aba340_dep.md5  dir_4c87553e855161554c0c65ed18612863.html  (+42 more)
.github/workflows/: doxygen.yml
ADC/: AD7124.cpp  AD7124.h  ad7124-defs.h  utils.h
BLE_Service/: BLEProcess.h  Service.h
ModelExecutor/: ModelExecutor.cpp  ModelExecutor.h
docs/html/: AD7124_8h_source.html  ModelExecutor_8h_source.html  classAD7124__coll__graph.dot  classBLEProcess.html  classModelExecutor.html  classNotifyCharacteristic-members.html  classNotifyCharacteristic.html  classSerialMailSender-members.html  dir_08521a20c7e3faa265ea2db0faea3013.html  dir_8d0a04de25e0d31ca61b4f6316399108.html  dir_b6a1b25c97174b03ee33ad89b32089b9.html  dir_d42cd31cad36dcf7f292dad5354fce4d.html  functions_func.html  hierarchy.html  index.html  inherit_graph_10.dot  inherit_graph_4.dot  inherit_graph_8.dot  structReadingQueue_1_1mail__t.html  structSerialMail_1_1FLATBUFFERS__FINAL__CLASS.html  structSerialMail_1_1SerialMailBuilder-members.html
docs/latex/: classAD7124.tex  classAD7124.tex.tmp  classAD7124__inherit__graph.dot  classBLEProcess.tex  classBLEProcess__coll__graph.dot  classNotifyCharacteristic.tex  classNotifyCharacteristic__coll__graph.dot  classSendingQueue.tex  classWatchPlant__service.tex  classWatchPlant__service__inherit__graph.dot  structSerialMail_1_1FLATBUFFERS__FINAL__CLASS.tex  structSerialMail_1_1FLATBUFFERS__FINAL__CLASS__inherit__graph.dot  structSerialMail_1_1SerialMailBuilder.tex
html/: ReadingQueue_8h_source.html  SendingQueue_8h_source.html  SerialMailSender_8h_source.html  annotated.html  classAD7124-members.html  classAD7124.html  classAD7124__coll__graph.map  classAD7124__inherit__graph.md5  classBLEProcess__coll__graph.map  classBLEProcess__inherit__graph.md5  classNotifyCharacteristic.html  classReadingQueue-members.html  classSendingQueue-members.html  classSendingQueue.html  classSerialMailSender.html  classWatchPlant__service.html  classes.html  dir_3484225f4b55c4e61e47b741b0aba340.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7ba5d7a8d31c19be1f169e0c01bd0f51.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f051e171a1db1f0f29da2b5f3d7bfce5.html  files.html  functions.html  graph_legend.html  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_2.map  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.md5  inherit_graph_6.md5  inherit_graph_8.md5  inherit_graph_9.map  inherit_graph_9.md5  inherits.html  logger_8h_source.html  (+5 more)
html/search/: classes_0.js  functions_3.js  functions_5.js
include/adc/: AD7124.h  utils.h
include/interfaces/: ReadingQueue.h  SendingPayload.h  SendingQueue.h
include/model_executor/: ModelExecutor.h
include/serial_communication/: SerialCommunication.h  mail.fbs  mail_generated.h
include/serial_mail_sender/: SerialMailGenerated.h  SerialMailSender.h
include/serializing_data/: mail.fbs  mail_generated.h  serial_mail.fbs  serial_mail_generated.h
include/utils/: Conversion.h  logger.h  mbed_stats_wrapper.h
latex/: annotated.tex  classAD7124.tex  classAD7124__coll__graph.md5  classBLEProcess.tex  classBLEProcess__coll__graph.md5  classModelExecutor.tex  classNotifyCharacteristic.tex  classNotifyCharacteristic__inherit__graph.md5  classReadingQueue.tex  classSerialMailSender.tex  classWatchPlant__service.tex  classWatchPlant__service__coll__graph.md5  hierarchy.tex  refman.tex  structReadingQueue_1_1mail__t.tex  structSendingQueue_1_1mail__t.tex  structSerialMail_1_1FLATBUFFERS__FINAL__CLASS.tex  structSerialMail_1_1FLATBUFFERS__FINAL__CLASS__coll__graph.md5
models/add/: model_pte.h
models/add2/: model_pte.h
models/add3/: model_pte.h  originial_model.py
models/add4/: model_pte.h
models/cnn/: model_pte.h
models/cnn2/: model_pte.h  train_cnn.py
models/cnn3/: model_pte.h  train_cnn.py
models/cnn_trained/: model_pte.h  model_pte_old.h
models/fcn/: model_pte.h
models/fcn_temp_ozone/: model_pte.h
models/lstm/: model_pte.h
models/softmax/: model_pte.h
scripts/config/: Cortex-M4F.cmake  NUCLEO_WB55RG.cmake  arm-none-eabi-gcc.cmake  startup_stm32wb55xx.S  stm32wb55xg.ld
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  searchdata.js
src/: main.cpp  main3.cpp
src/adc/: AD7124.cpp
src/ble_service/: Characteristic.h
src/interfaces/: ReadingQueue.cpp  SendingQueue.cpp
src/model_executor/: ModelExecutor.cpp
src/serial_communication/: SerialCommunication.cpp
src/utils/: Conversion.cpp  (+2 more)
utils/: nucleo_wb55rg_toolchain.cmake  setup_et.sh  targets.patch
(+51 files in other folders)
